fix spacing in css

--- a/src/components/beer-loader/style.css
+++ b/src/components/beer-loader/style.css
@@ -5,10 +5,8 @@ body {
 
 .wrapper {
   background-color: white;
-  height: 100vh;
-  width: 100vw;
   display: flex;
-  align-items: center;
+  margin-top: 10rem;
   justify-content: center;
 }
 
